--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,8 +18,17 @@
    
 }
 
+.img-black{
+    width:100%;
+    height: 90%;
+}
+
 .button-radius{
     border-radius: 20px;
+}
+
+.bg-sustainability{
+    background-color: #EBFAF5;
 }
 
 .bg-orange{
