--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,3 +39,14 @@
     background-color: #FAFAFA;
 }
 
+.custoverlay{
+    position:absolute; 
+    display:flex; 
+    top: 0%; 
+    left: 0; 
+    width: 100%; 
+    background-image: linear-gradient(to bottom, rgba(0,0,0,0.5), rgba(0,0,0,0.5));
+}
+.btn-meet-au{
+    width: 250px;
+}
