--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,6 +47,14 @@
     width: 100%; 
     background-image: linear-gradient(to bottom, rgba(0,0,0,0.5), rgba(0,0,0,0.5));
 }
+.bgoverlay{
+    position:absolute; 
+    display:flex; 
+    top: 0%; 
+    left: 0; 
+    width: 100%; 
+    background-image: linear-gradient(to left, rgba(0,0,0,0), rgba(0,0,0,1));
+}
 .btn-meet-au{
     width: 250px;
 }
